# tera-playground

./: .gitignore  .prettierignore  CLAUDE.md  LICENSE  README.md  eslint.config.js  package-lock.json  package.json  prettier.config.js  vite.config.ts
.claude/: settings.json
.github/workflows/: ci.yml
scripts/: check-all.sh  format-changed.sh
src/: app.css  app.html
src/lib/: emoji.ts  playground-file.ts  share.ts  tera.ts
src/lib/wasm/: package.json  tera_wasm.d.ts  tera_wasm.js  tera_wasm_bg.wasm  tera_wasm_bg.wasm.d.ts
src/routes/: +layout.svelte  +page.svelte
wasm/: Cargo.toml
wasm/src/: lib.rs
